Begin applying flexbox layouts to the page
So far, the header and top informational of the page have the layouts laid out.

--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
     </head>
 
     <body>
-        <h3>Daniel Vitacolonna</h3>
-        <a href="#">header link one</a>
-        <a href="#">header link two</a>
-        <a href="#">header link three</a>
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast.
-        </p>
-        <button>Sign up</button>
+        <div class="header">
+            <h3 class="header_name">Daniel Vitacolonna</h3>
+            <a class="header_links" href="#">header link one</a>
+            <a class="header_links" href="#">header link two</a>
+            <a class="header_links" href="#">header link three</a>
+        </div>
+
+        <div class="sign_up">
+            <div>
+                <h1 class="hero_header">This website is awesome</h1>
+                <p class="hero_text">This website has some subtext that goes here under the main title.
+                It's a smaller font and the color is lower contrast.
+                </p>
+                <button>Sign up</button>
+            </div>
+            <img class="chuck1" src="./images/chuck.jpeg" alt="my beautiful puppy, Chuck">
+        </div>
+
         <h2>Some random information.</h2>
         <img>
         <p>this is some subtext under an illustration or image.</p>
@@ -33,6 +42,6 @@
         <h4>Call to action! It's Time!</h4>
         <p>Sign up for our product by clicking that button right over there!</p>
         <button>Sign up</button>
-        <p>Copyright &copy; The Odin Project 2021</p>
+        <p class="footer">Copyright &copy; The Odin Project 2021</p>
     </body>
 </html>
