Add images and further layout changes
Adding pictures to the page, and continuing to improve the layout.

--- a/index.html
+++ b/index.html
@@ -25,20 +25,38 @@
             <img class="chuck1" src="./images/chuck.jpeg" alt="my beautiful puppy, Chuck">
         </div>
 
-        <h2>Some random information.</h2>
-        <img>
-        <p>this is some subtext under an illustration or image.</p>
-        <img>
-        <p>this is some subtext under an illustration or image.</p>
-        <img>
-        <p>this is some subtext under an illustration or image.</p>
-        <img>
-        <p>this is some subtext under an illustration or image.</p>
-        <h2>This is an inspring quote, or a testimonial from a customer.
+        <h2 class="random_info">Some random information.</h2>
+
+        <div class="random_pics">
+            <div class="pic_and_text">
+                <img class="random_single_pic" src="./images/kelsey_and_chuck.jpg" 
+                alt="my wife and puppy">
+                <p>this is some subtext under an illustration or image.</p>
+            </div>
+            <div class="pic_and_text">
+                <img class="random_single_pic" src="./images/kelsey_and_chuck2.jpg"
+                alt ="my wife and puppy again">
+                <p>this is some subtext under an illustration or image.</p>
+            </div>
+            <div class="pic_and_text">
+                <img class="random_single_pic" src="./images/simba_and_nala.jpg"
+                alt="my parents' Great Pyreness and Leonberger">
+                <p>this is some subtext under an illustration or image.</p>
+            </div>
+            <div class="pic_and_text">
+                <img class="random_single_pic" src="./images/leon_puppy.jpg"
+                alt="such a beautiful Leonberger puppy">
+                <p>this is some subtext under an illustration or image.</p>
+            </div>
+        </div>
+
+        <div class="quote_block">
+            <h2 class="quote">This is an inspring quote, or a testimonial from a customer.
             Maybe it's just filling up space, or maybe people will actually read it.
             Who knows? All I know is that it looks nice.
-        </h2>
-        <p>-Thor, God of Thunder</p>
+            </h2>
+            <p class="quote_attribution">-Thor, God of Thunder</p>
+        </div>
         <h4>Call to action! It's Time!</h4>
         <p>Sign up for our product by clicking that button right over there!</p>
         <button>Sign up</button>
