Finish the editing to the layout
The layout changes are complete (for now). The last step will be personalizing content.

--- a/index.html
+++ b/index.html
@@ -57,9 +57,19 @@
             </h2>
             <p class="quote_attribution">-Thor, God of Thunder</p>
         </div>
-        <h4>Call to action! It's Time!</h4>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+
+        <div class="call_to_action">
+            <div class="call_to_action_box">
+                <div>
+                    <h4>Call to action! It's Time!</h4>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div>
+                    <button class="call_to_action_button">Sign up</button>
+                </div>
+            </div>
+        </div>
+        
         <p class="footer">Copyright &copy; The Odin Project 2021</p>
     </body>
 </html>
