Add some final personalization touches
Links and buttons were left alone (potential to modify in the future). The text was tailored to myself and my interests.

--- a/index.html
+++ b/index.html
@@ -16,46 +16,47 @@
 
         <div class="sign_up">
             <div>
-                <h1 class="hero_header">This website is awesome</h1>
-                <p class="hero_text">This website has some subtext that goes here under the main title.
-                It's a smaller font and the color is lower contrast.
+                <h1 class="hero_header">This is a little about me</h1>
+                <p class="hero_text">Just to show a bit about myself and my interests.
+                    This page will show some animals in my life that I love.
                 </p>
                 <button>Sign up</button>
             </div>
             <img class="chuck1" src="./images/chuck.jpeg" alt="my beautiful puppy, Chuck">
         </div>
 
-        <h2 class="random_info">Some random information.</h2>
+        <h2 class="random_info">Pictures of beautiful people/animals.</h2>
 
         <div class="random_pics">
             <div class="pic_and_text">
                 <img class="random_single_pic" src="./images/kelsey_and_chuck.jpg" 
                 alt="my wife and puppy">
-                <p>this is some subtext under an illustration or image.</p>
+                <p>This is my wife and puppy, Chuck.</p>
             </div>
             <div class="pic_and_text">
                 <img class="random_single_pic" src="./images/kelsey_and_chuck2.jpg"
                 alt ="my wife and puppy again">
-                <p>this is some subtext under an illustration or image.</p>
+                <p>Chuck getting older and more attentive.</p>
             </div>
             <div class="pic_and_text">
                 <img class="random_single_pic" src="./images/simba_and_nala.jpg"
                 alt="my parents' Great Pyreness and Leonberger">
-                <p>this is some subtext under an illustration or image.</p>
+                <p>My parents' dogs, Simba and Nala.</p>
             </div>
             <div class="pic_and_text">
                 <img class="random_single_pic" src="./images/leon_puppy.jpg"
                 alt="such a beautiful Leonberger puppy">
-                <p>this is some subtext under an illustration or image.</p>
+                <p>The previous Leonberger my parents had, Teddy.</p>
             </div>
         </div>
 
         <div class="quote_block">
-            <h2 class="quote">This is an inspring quote, or a testimonial from a customer.
-            Maybe it's just filling up space, or maybe people will actually read it.
-            Who knows? All I know is that it looks nice.
+            <h2 class="quote">If you always put limit on everything you do, physical 
+                or anything else. It will spread into your work and into your 
+                life. There are no limits. There are only plateaus, and you must 
+                not stay there, you must go beyond them.
             </h2>
-            <p class="quote_attribution">-Thor, God of Thunder</p>
+            <p class="quote_attribution">-Bruce Lee</p>
         </div>
 
         <div class="call_to_action">
